# vast-sdk

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start_server.sh  start_server_sdk.sh
.github/workflows/: python-publish.yml  vast-sdk-testing.yml
benchmarks/: docker-compose.yml  llm_prom_metrics.py  prometheus_metrics.py
benchmarks/prometheus/: prometheus.yml
cli/: serve-deployment.py  serve_deployment.py
docker/: Dockerfile.worker.test
docker/inject/: sitecustomize.py
docs/: unit-test-requirements.md  vast-sdk-testing-infra-architecture.md
examples/: ace_example.py  callback_example.py  comfy_example.py  load_example.py  prometheus_metrics.py  simple_example.py  wan_example.py
examples/client/: ace_example.py  callback_example.py  comfy_concurrent.py  comfy_example.py  comfy_load_example.py  comfy_session.py  load_example.py  load_local.py  remote_example.py  request_report.py  session_example.py  simple_example.py  stream_convo_example.py  streaming_example.py  task_example.py  tgi_simple_example.py  tgi_stream_example.py  vllm_load_example.py  vllm_simple_example.py  vllm_stream_convo_example.py  vllm_streaming_example.py  wan_example.py  worker_example.py
examples/deployments/image_gen/: deploy.py  run.py
examples/deployments/square/: client.py  deploy.py
examples/deployments/train_mnist/: client.py  deploy.py
examples/deployments/vllm/: client.py  deploy.py
examples/deployments/vllm_image/: deploy.py
examples/deployments/vllm_inference/: deploy.py
examples/remote/: call_remote.py  chain.py  comfy_endpoint.py  endpoint.py  mandelbrot.py  my_torch.py  psychedlic_comfy.py  pytorch_endpoint.py  qwendpoint.py  qwendpoint_client.py  run.py  run_comfy.py  run_mandelbrot.py  run_psychedelic_comfy.py  run_pytorch.py  run_qwendpoint.py  run_slime_mold.py  slime_mold.py  square.py  vast-serve.py
examples/server/: ace_worker.py  comfy_worker.py  simple_worker.py  tgi_worker.py  tutorial_worker.py  vllm_worker.py  wan_example.py
examples/session/: client.py  model.py  worker.py
examples/task/: client.py  model.py  test.ipynb
examples/vast/: delete_all_instances.py  delete_all_instances.sh
sdk-wrapper/: README.md  pyproject.toml
tests/: .coverage  README.md  __init__.py  conftest.py  pyproject.toml  test_data_objects.py  test_georegions.py  test_imports.py  test_search.py  test_serverless_lifecycle.py  test_tar_utils.py  test_template_functions.py  test_unparse_query.py  test_vastai_sdk_unit.py
tests/api/: test_client.py  test_query.py
tests/cli/: test_auth_commands.py  test_billing_commands.py  test_clusters_commands.py  test_deployments_commands.py  test_display.py  test_endpoints_commands.py  test_instances_commands.py  test_keys_commands.py  test_machines_commands.py  test_misc_commands.py  test_offers_commands.py  test_parser.py  test_storage_commands.py  test_teams_commands.py  test_util.py
tests/live/: test_live_env_var_cycle.py  test_live_readonly.py  test_live_ssh_key_cycle.py
tests/pip_install/: README.md  test_install_scenarios.sh
tests/sdk/: test_sdk.py
tests/serverless/: __init__.py  test_backend.py  test_backend_session_handlers.py  test_client.py  test_client_endpoint.py  test_client_serverless.py  test_client_session.py  test_client_ssl.py  test_connection.py  test_endpoint_client.py  test_pyworker_metrics.py  test_server.py  test_server_data_types.py  test_server_lib.py  test_server_worker.py  test_serverless_client.py  test_session.py  test_worker_client_type.py  test_worker_config.py  test_worker_server.py
vastai/: __init__.py  _base.py  _compat.py  logging.py  sdk.py  utils.py  vast.py  vastai_base.py  vastai_sdk.py
vastai/api/: __init__.py  auth.py  billing.py  client.py  clusters.py  deployments.py  endpoints.py  instances.py  keys.py  machines.py  offers.py  query.py  storage.py  teams.py
vastai/async_/: __init__.py  client.py  results.py
vastai/cli/: __init__.py  display.py  main.py  parser.py  util.py  utils.py
vastai/cli/commands/: __init__.py  auth.py  billing.py  clusters.py  deployments.py  endpoints.py  instances.py  keys.py  machines.py  misc.py  offers.py  storage.py  teams.py
vastai/data/: __init__.py  deployment.py  endpoint.py  instance.py  offer.py  query.py  workergroup.py
vastai/serverless/: __init__.py  cli.py
vastai/serverless/client/: __init__.py  client.py  connection.py  endpoint.py  managed.py  remote.py  request_status.py  session.py  utils.py  worker.py
vastai/serverless/remote/: __init__.py  base.py  deploy.py  deployment.py  deployment_old.py  deployments.py  endpoint.py  endpoint_group.py  remote-deploy.py  serialization.py  serve.py  template.py  utils.py  worker_group.py
vastai/serverless/server/: worker.py
vastai/serverless/server/lib/: backend.py  data_types.py  metrics.py  server.py
vastai/serverless/server/templates/: vllm.py
vastai/sync/: __init__.py  client.py  results.py
vastai_sdk/: __init__.py  vast.py  vastai_sdk.py
vastai_sdk/serverless/: client.py  connection.py  endpoint.py
vastai_sdk/serverless/client/: client.py  connection.py  endpoint.py
vastai_sdk/serverless/server/: worker.py
vastai_sdk/serverless/server/lib/: backend.py  data_types.py  metrics.py
vastai_sdk/serverless/server/templates/: vllm.py
