[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vastai"
version = "0.0.0"
description = "SDK for Vast.ai GPU Cloud Service"
readme = "README.md"
authors = [
  "Chris McKenzie <chris@vast.ai>",
  "Lucas Armand <lucas@vast.ai>",
  "Zuby Javed <zuby@vast.ai>"
]
homepage = "https://vast.ai"
repository = "https://github.com/vast-ai/vast-sdk"
packages = [
  { include = "vastai" },
  { include = "vastai_sdk" }
]

[tool.poetry.scripts]
vast = "vastai.serverless.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
vcs = "git"

[tool.poetry.dependencies]
python = ">=3.9"
jsonschema = ">=3.2"
xdg = ">=1.0.0"
borb = "~2.1.25"
requests = ">=2.32.3"
python-dateutil = ">=2.8.2"
pytz = ">=2023.3"
urllib3 = ">=2.0,<3.0"
pyparsing = ">=3.1,<4.0"
fastapi = ">=0.110,<1.0"
uvicorn = { version = ">=0.24,<0.32", extras = ["standard"] }
aiohttp = ">=3.9.1" 
aiodns = ">=3.6.0" 
pycares = "=4.11.0"
aiofiles = ">=23.0"
anyio = "~4.4"
nltk = "~3.9"
psutil = "~6.0"
pycryptodome = "~3.20"
transformers = "~4.52"
hf_transfer = ">=0.1.9"
argcomplete = ">=2.0"
curlify = ">=2.2"
rich = ">=13.0"
cryptography = ">=41.0"
gitpython = ">=3.1"
toml = ">=0.10"
qrcode = ">=7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit the real Vast.ai API (require VAST_API_KEY)",
]
addopts = "-m 'not live' --tb=short -q"

[tool.poetry.scripts]
vastai = "vastai.cli.main:main"

[tool.poetry.urls]
Homepage = "https://vast.ai"
Source = "https://github.com/vast-ai/vast-sdk"
