[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vastai-sdk"
version = "0.0.0"
description = "SDK for Vast.ai GPU Cloud Service"
readme = "README.md"
authors = [
  "Chris McKenzie <chris@vast.ai>",
  "Lucas Armand <lucas@vast.ai>",
  "Zuby Javed <zuby@vast.ai>"
]
homepage = "https://vast.ai"
repository = "https://github.com/vast-ai/vast-sdk"
packages = [
  { include = "vastai" },
  { include = "vastai_sdk" },
  { include = "cli" }
]

[tool.poetry.scripts]
serve-vast-deployment = "cli.serve_deployment:main"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
vcs = "git"

[tool.poetry.dependencies]
python = ">=3.9"
jsonschema = ">=4.26.0"
xdg = ">=6.0.0"
borb = ">=3.0.7"
requests = ">=2.33.1"
python-dateutil = ">=2.9.0"
pytz = ">=2026.1"
urllib3 = ">=2.6.3"
pyparsing = ">=3.3.2"
fastapi = ">=0.131.1"
uvicorn = { version = ">=0.42.0", extras = ["standard"] }
aiohttp = ">=3.13.5"
aiodns = ">=4.0.0"
pycares = ">=5.0.1"
aiofiles = ">=25.1.0"
anyio = ">=4.13.0"
nltk = ">=3.9.4"
psutil = ">=7.2.2"
pycryptodome = ">=3.23.0"
transformers = ">=5.4.0"
hf_transfer = ">=0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the live Vast API",
    "serverless: serverless tests that create real resources (costs money)",
]
asyncio_mode = "strict"

[tool.poetry.urls]
Homepage = "https://vast.ai"
Source = "https://github.com/vast-ai/vast-sdk"
